# restaurant-fastapi

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  celery-beat.sh  celery-worker.sh  celerybeat-schedule.bak  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  start.sh  test.ipynb  test.sh
admin/: Menu.xlsx  __main__.py  xl_parser.py
api/: router.py
api/v1/: router.py
api/v1/endpoints/: dishes.py  dishes_endpoints.py  menus.py  menus_endpoints.py  submenus.py  submenus_endpoints.py
background/: celery.py  tasks.py
background/cache/: bindings.json
background/xl_parser/: __init__.py  db_sync.py  schemas.py  xl_parser.py
background/xl_parser/cache/: bindings.json  temp.json
cache/: redis.py
core/: config.py
db/: init_db.py  session.py
db/migrations/: env.py
db/migrations/versions/: 042708222378_add_discount.py  1da8d3bf953b_change_cascade.py  7a222c469b07_create_tables.py  c3a5c7255b6a_change_cascade.py  f204437d0598_change_cascade.py
docs/db/: database.dbml  task1.md
models/: __init__.py  base.py  dish.py  menu.py  submenu.py
repositories/: dish_repository.py  menu_repository.py  submenu_repository.py
repository/: crud_repository.py  dish.py  menu.py  submenu.py
schemas/: __init__.py  dish.py  menu.py  submenu.py
services/: dish.py  dish_service.py  menu.py  menu_service.py  submenu_service.py
src/: alembic.ini  main.py  pyproject.toml  start.sh
src/api/: router.py
src/api/api_v1/: router.py
src/api/api_v1/endpoints/: dishes.py  menus.py  submenus.py
src/api/endpoints/: menus.py
src/api/v1/: router.py
src/api/v1/endpoints/: dishes.py  menus.py  submenus.py
src/core/: config.py
src/db/: init_db.py  session.py
src/db/migrations/: env.py
src/models/: __init__.py  dish.py  menu.py  submenu.py
src/schemas/: dish.py  menu.py  submenu.py
src/scripts/: wait-for-it.sh
src/services/: menu.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  client.py  test_dish.py  test_menu.py  test_submenu.py
tests/api/mocks/: dish_service.py  menu_service.py  submenu_repository.py
tests/integration/: test_cascade.py  test_computed_fields.py  test_dish_crud.py  test_menu_crud.py  test_submenu_crud.py
(+2 files in other folders)
